--- a/SpaceTraderAndroid/app/src/main/AndroidManifest.xml
+++ b/SpaceTraderAndroid/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.PlanetActivity"></activity>
+        <activity android:name=".views.MarketActivity"></activity>
+        <activity android:name=".views.PlanetActivity" />
         <activity android:name=".views.ConfigureGameActivity" />
         <activity
             android:name=".views.MainActivity"
