--- a/SpaceTraderAndroid/app/build.gradle
+++ b/SpaceTraderAndroid/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
+    implementation 'com.google.firebase:firebase-database:16.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
