--- a/SpaceTraderIOS/Podfile
+++ b/SpaceTraderIOS/Podfile
@@ -9,6 +9,7 @@ target 'SpaceTraderIOS' do
   pod 'Firebase/Core'
   pod 'Firebase/Auth'
   pod 'Firebase/Database'
+  pod 'GoogleSignIn'
   target 'SpaceTraderIOSTests' do
     inherit! :search_paths
     # Pods for testing
